--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <h3 class="text-xl font-bold mb-4">Frontend</h3>
                     <div class="space-y-3">
                         <div class="flex items-center justify-between">
-                            <span class="text-gray-700">React 18</span>
+                            <span class="text-gray-700">React</span>
                             <span class="text-blue-600 font-bold">95%</span>
                         </div>
                         <div class="skill-bar bg-gray-200">
@@ -548,7 +548,7 @@
                             <span>Mis à jour le 28 Oct</span>
                         </div>
                         <div class="flex flex-wrap gap-2 mb-6">
-                            <span class="tech-tag px-3 py-1 rounded-full text-sm">React 18</span>
+                            <span class="tech-tag px-3 py-1 rounded-full text-sm">React</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Tailwind CSS</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Axios</span>
                         </div>
@@ -632,7 +632,7 @@
                             </div>
                         </div>
                         <h3 class="text-xl font-bold mb-3 group-hover:text-blue-600 transition-colors">Frontend Dynamique</h3>
-                        <p class="text-gray-600 mb-4">Application React 18 avec Tailwind CSS, gestion d'état avancée, composants réutilisables et expérience utilisateur fluide.</p>
+                        <p class="text-gray-600 mb-4">Application React avec Tailwind CSS, gestion d'état avancée, composants réutilisables et expérience utilisateur fluide.</p>
                         <div class="flex items-center text-gray-500 text-sm mb-4">
                             <i class="far fa-clock mr-2"></i>
                             <span>Expérience professionnelle</span>
@@ -718,7 +718,7 @@
                                     </li>
                                     <li class="flex items-start">
                                         <i class="fas fa-check text-green-500 mt-1 mr-2 flex-shrink-0"></i>
-                                        <span>Implémentation frontend avec React 18 et Tailwind CSS</span>
+                                        <span>Implémentation frontend avec React et Tailwind CSS</span>
                                     </li>
                                     <li class="flex items-start">
                                         <i class="fas fa-check text-green-500 mt-1 mr-2 flex-shrink-0"></i>
