--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                             100: '#dbeafe',
                             200: '#bfdbfe',
                             300: '#93c5fd',
-                            400: '#60a5fa',
-                            500: '#3b82f6',
+                            400: '#60afa',
+                            00: '#3b82f6',
                             600: '#2563eb',
                             700: '#1d4ed8',
                             800: '#1e40af',
@@ -204,7 +204,7 @@
                                 <i class="fas fa-code"></i>
                             </div>
                             <div>
-                                <p class="font-bold">50+</p>
+                                <p class="font-bold">5+</p>
                                 <p class="text-sm text-gray-500">Projets réalisés</p>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 <i class="fas fa-microchip"></i>
                             </div>
                             <div>
-                                <p class="font-bold">15+</p>
+                                <p class="font-bold">10+</p>
                                 <p class="text-sm text-gray-500">Technologies</p>
                             </div>
                         </div>
@@ -522,7 +522,7 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Spring Security</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">JPA</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <a href="https://github.com/MartialMauriceDiatta/backend-CRUD" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             Voir le code <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -552,7 +552,7 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Tailwind CSS</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Axios</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <a href="https://github.com/MartialMauriceDiatta/frontend-CRUD" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             Voir le code <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -582,7 +582,7 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Bootstrap</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">MySQL</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <a href="https://github.com/MartialMauriceDiatta/catalogue1" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             Voir le code <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
@@ -612,9 +612,9 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Docker</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">API Gateway</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <!-- <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             En savoir plus <i class="fas fa-arrow-right ml-2"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 
@@ -642,9 +642,9 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">React Router</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Responsive Design</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <!-- <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             En savoir plus <i class="fas fa-arrow-right ml-2"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 
@@ -672,9 +672,9 @@
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Validation</span>
                             <span class="tech-tag px-3 py-1 rounded-full text-sm">Code Generation</span>
                         </div>
-                        <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
+                        <!-- <a href="#" class="text-blue-600 font-medium inline-flex items-center hover:text-blue-800">
                             En savoir plus <i class="fas fa-arrow-right ml-2"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
